fixed view on iphone

--- a/src/client/css/home.css
+++ b/src/client/css/home.css
@@ -76,12 +76,12 @@ div {
     position: absolute;
     left: 0;
     top: 45%;
-    width: 50%;
+    width: 70%;
     text-align: center;
     color: #000;
     background-color: lightslategray;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 15%;
+    margin-right: 15%;
     font-family: 'Londrina Shadow';
 }
 
